--- a/RandomForestEnsemble.Rmd
+++ b/RandomForestEnsemble.Rmd
@@ -5,3 +5,11 @@ output:
   html_notebook: default
 ---
 
+
+## Random Forests 
+
+Random Forests are a __Ensembling__ technique which is similar to a famous Ensemble technique called  *__Bagging__* but a different tweak in it. In Random Forests the idea is to __decorrelates__ the several trees which are generated on the different bootstrapped samples from training Data.And then we simply reduce the Variance of the Trees by averaging them. 
+
+Averaging the Trees helps us to reduce the variance and also improve the Perfomance of Decision Trees on Test Set and eventually avoid Overfitting.
+
+The idea is to build a lots of Trees in such a way to make the *Correlation* between the Trees smaller.
