--- a/RandomForestEnsemble.Rmd
+++ b/RandomForestEnsemble.Rmd
@@ -79,6 +79,19 @@ We could now try all possible 13 predictors which can be considered at each spli
 oob.err<-double(13)
 test.err<-double(13)
 
+#mtry is no of Variables randomly chosen at each split
+for(mtry in 1:13) 
+{
+  rf=randomForest(medv ~ . , data = Boston , subset = train,mtry=mtry,ntree=400) 
+  oob.err[mtry] = rf$mse[400] #Error of all Trees fitted
+  
+  pred<-predict(rf,Boston[-train,]) #Predictions on Test Set for each Tree
+  test.err[mtry]= with(Boston[-train,], mean(medv - pred)^2) #Mean Squared Test Error
+  
+  cat(mtry," ")
+  
+}
+
 
 ```
 
