Finished with implementing Random Forests in R

--- a/RandomForestEnsemble.Rmd
+++ b/RandomForestEnsemble.Rmd
@@ -8,15 +8,15 @@ output:
 
 ## Random Forests 
 
-Random Forests are a __Ensembling__ technique which is similar to a famous Ensemble technique called  *__Bagging__* but a different tweak in it. In Random Forests the idea is to __decorrelates__ the several trees which are generated on the different bootstrapped samples from training Data.And then we simply reduce the Variance of the Trees by averaging them. 
+Random Forest is a __Ensembling__ technique which is similar to a famous Ensemble technique called  *__Bagging__* but a different tweak in it. In Random Forests the idea is to __decorrelate__ the several trees which are generated on the different bootstrapped samples from training Data.And then we simply reduce the Variance of the Trees by averaging them. 
 
 Averaging the Trees helps us to reduce the variance and also improve the Perfomance of Decision Trees on Test Set and eventually avoid Overfitting.
 
 The idea is to build a lots of Trees in such a way so as to make the *Correlation* between the Trees smaller.
 
-Another major difference is that we only consider a Random subset of predictors $X_i$,say $m$ each time we do a split on training examples.Whereas usually in Trees we consider all the predictors while doing a split and choose best amongst them. Typically  $m = \sqrt{p} $ where $p$ are the number of predictors.
+Another major difference is that we only consider a Random subset of predictors $m$ each time we do a split on training examples.Whereas usually in Trees we consider all the predictors while doing a split and choose best amongst them. Typically  \(m=\sqrt{p}\) where $p$ are the number of predictors.
 
-Now it seems crazy to throw away lots of predictors but it actually makes sense because the effect of doing is that each tree uses different predictors to split data at different times.
+Now it seems crazy to throw away lots of predictors but it actually makes sense because the effect of doing so is that each tree uses different predictors to split data at different times.
 
 *So by doing this trick of throwing away Predictors, we have decorrelated the Trees and the resulting average seems a little better. *
 
@@ -119,5 +119,20 @@ legend("topright",legend=c("Out of Bag Error","Test Error"),pch=19, col=c("red",
 Now what we observe is that the Red line is the Out of Bag Error Estimates and the Blue Line is the Error calculated on Test Set.Both curves are quiet smooth and the error estimates are somewhat correlated too.
 The Error Tends to be minimized at around $mtry = 4$.  
 
-On the Extreme Right Hand Side of the above Plot we choose all possible 13 predictors at each Split which is __Bagging__.
+On the Extreme Right Hand Side of the above Plot we considered all possible 13 predictors at each Split which is __Bagging__.
+
+
+----
+
+
+
+### Conclusion
+
+
+Random Forests are a very Nice technique to fit a Stronger Model by averaging Lots of Trees and reduicing the Variance and avoiding Overfitting in Trees build on Training Data.Decision Trees themselves are bad in Prediction on test set,but when used with Ensembling Techniques like Bagging , Random Forests etc their Predictive perfomance are improved a lot.
+
+
+
+
+
 
